--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ts-browser-compat",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "bin": "./dist/bin.js",
   "scripts": {
-    "sample": "ts-node src/runner.ts sample",
+    "sample": "ts-node src/bin.ts",
     "pretty": "prettier -w **/*.ts **/*.json **/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,9 +15,17 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-  }
+    "@mdn/browser-compat-data": "^5.2.15",
+    "cmd-ts": "^0.11.0"
+  },
+  "peerDependencies": {
+    "typescript": "^4.5.0"
+  },
+  "files": [
+    "dist"
+  ]
 }
