--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "scripts": {
     "sample": "ts-node src/bin.ts",
     "pretty": "prettier -w **/*.ts **/*.json **/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config tests/jest.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.3.1",
     "@types/node": "^18.11.9",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
