--- a/sample/tsconfig.json
+++ b/sample/tsconfig.json
@@ -6,12 +6,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "module": "CommonJS",
-    "moduleResolution": "node",
-    "plugins": [
-      {
-        "name": "ts-browser-compat"
-      }
-    ]
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"]
 }
